# prob_conf_mat

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  404.html  LICENSE  Makefile  README.md  env.yaml  estimate.py  index.html  mkdocs.py  mkdocs.yaml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/: dependabot.yaml
.github/workflows/: documentation.yaml  test.yaml
Explanation/: experiment_aggregation.html  generating_confusion_matrices.html  hypothesis_testing.html  metric_computation.html  totsch_replication.html
Getting Started/: 01_estimating_uncertainty.html  02_comparing_experiments.html  03_aggregating_experiments.html  04_interfacing_with_the_filesystem.html
How To Guides/: choosing_a_prior.html  comparing_many_experiments.html  configuration.html  extending_the_library.html  metric_syntax.html
Reference/: Experiment.html  ExperimentGroup.html  IO.html  Statistics.html  Study.html  index.html
Reference/Experiment Aggregation/: heterogeneity.html  index.html
Reference/Metrics/: Averaging.html  Metrics.html  index.html
_partial/: averaging.html  experiment_aggregation.html  metrics.html  metrics_index.html
assets/javascripts/: bundle.13a4f30d.min.js  bundle.56ea9cef.min.js
documentation/: configuration.md  implementing_metrics_and_aggregations.md  index.md  metric_syntax.md  mkdocs.py
documentation/API/: ExperimentManager.md
documentation/API/Metrics/: Accuracy.md
documentation/Explanation/: totsch_replication.ipynb
documentation/Getting Started/: 01_estimating_uncertainty.ipynb  02_comparing_experiments.ipynb  03_aggregating_experiments.ipynb  04_interfacing_with_the_filesystem.ipynb  aggregating_experiments.ipynb  comparing_experiments.ipynb  estimating_uncertainty.ipynb  first_steps.ipynb  mnist_digits_class.ipynb
documentation/Getting Started/mnist_digits/: config.yaml
documentation/Guides/: configuration.md
documentation/How To Guides/: configuration.md  extending_the_library.md
documentation/Reference/: Experiment.md  ExperimentGroup.md  ExperimentManager.md  IO.md  Statistics.md  Study.md
documentation/Reference/Experiment Aggregation/: index.md
documentation/Reference/Metrics/: Averaging.md  Metrics.md  index.md
documentation/References/: Experiment.md  ExperimentManager.md  IO.md
documentation/References/Experiment Aggregation/: index.md
documentation/References/Metrics/: Averaging.md  Metrics.md  index.md
documentation/_partial/: averaging.md  experiment_aggregation.md  io.md  metrics.md
documentation/_static/: css.css  custom.css  mathjax.js
documentation/_static/css/: main.css
documentation/extending_the_library/: implementing_metrics_and_aggregations.md
documentation_overrides/: main.html
main/: __init__.py  bayesian_conf_matrix.py  distributions.py  format.py  io.py  stats.py
search/: search_index.json
src/: aggregation.py  conf_mat_io.py  confusion_matrix.py  distributions.py  io.py  stats.py
src/bayes_conf_mat/: __init__.py  config.py  confusion_matrix.py  experiment.py  experiment_group.py  experiment_manager.py  io.py  stats.py  study.py  study_deprecated.py
src/bayes_conf_mat/cli/: recipe.py
src/bayes_conf_mat/config/: __init__.py  config.py  frozen_attr_dict.py  load_config.py  schema.py  validation.py
src/bayes_conf_mat/config_deprecated/: config.py
src/bayes_conf_mat/config_management/: __init__.py  config.py  frozen_attr_dict.py  schema.py
src/bayes_conf_mat/experiment_aggregation/: __init__.py  abc.py  base.py  beta.py  beta_conflation.py  fe_gaussian.py  gaussian_conflation.py  heterogeneity.py  histogram.py  interface.py  re_gaussian.py  re_meta_analysis.py
src/bayes_conf_mat/io/: __init__.py  (+5 more)
src/metrics/: __init__.py  aggregation.py  binary.py  multiclass.py  registration.py  simple.py
src/prob_conf_mat/: experiment_group.py  io.py  study.py
tests/: README.md  commands_to_run_test.txt  metric_equivalence.py  metrics.ipynb  test_basic_example.py  test_config.py  test_extension.py  test_io.py  test_metric_equivalence.py  test_metrics.py  test_notebooks.py  test_reporting_example.py  test_rng.py  test_study.py  tested_metrics.txt  untested_metrics.txt
tests/confusion_matrices/: sklearn_1.csv  sklearn_2.csv  sklearn_face_classification.csv  sklearn_text_documents.csv  wikipedia_fecal_occult_blood.csv
tests/profile/: basic_example.py  dirichlet_distribution.py
(+107 files in other folders)
