# TODO: finish writing this file
[project]
name = "bayes_conf_mat"
version = "0.0.1"
description = ""
authors = [{ name = "Ivo Verhoeven", email = "i.o.verhoeven@uva.nl" }]
license = { file = "LICENSE" }
readme = "README.md"
# TODO: check out the other available classifiers
classifiers = ["Programming Language :: Python :: 3"]
# TODO: add some keywords

requires-python = ">=3.8"
dependencies = [
  "numpy",
  "scipy",
  "tabulate",
  "matplotlib",
  "jaxtyping",
  "strictyaml",
]

[project.optional-dependencies]
kde = ["lightkde"]

[project.urls]
"Homepage" = "https://github.com/ioverho/bayes_conf_mat"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint.per-file-ignores]
# Ignore `F401` (import violations) and `F403` (undefined names) in all `__init__.py` files
"__init__.py" = ["F401", "F403"]
