[project]
name = "bayes-conf-mat"
version = "0.1.0"
description = ""
authors = [{ name = "Ivo Verhoeven", email = "i.o.verhoeven@uva.nl" }]
license = { file = "LICENSE" }
readme = "README.md"
# TODO: check out the other available classifiers
classifiers = ["Programming Language :: Python :: 3"]
# TODO: add some keywords

requires-python = ">=3.11"
dependencies = [
    "jaxtyping>=0.3",
    "numpy>=2.2",
    "scipy>=1.15",
    "tabulate>=0.9",
    "matplotlib>=3.10",
    "seaborn>=0.13",
]

[project.urls]
"Homepage" = "https://github.com/ioverho/bayes_conf_mat"

[dependency-groups]
dev = [
    "griffe-inherited-docstrings>=1.1.1",
    "mkdocs>=1.6.1",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-material[imaging]>=9.5.49",
    "mkdocstrings[python]>=0.27.0",
    "nbconvert>=7.16.4",
    "nbformat>=5.10.4",
    "pip>=25.0.1",
    "pre-commit>=4.2.0",
    "pyright>=1.1.400",
    "pytest>=8.3.4",
    "pyyaml>=6.0.2",
    "ruff>=0.11.5",
    "scikit-learn>=1.6.1",
    "toml>=0.10.2",
]

# Linting - Ruff
[tool.ruff.lint]
ignore = ["F722"]

[tool.ruff.lint.per-file-ignores]
# Ignore `F401` (import violations) and `F403` (undefined names) in all `__init__.py` files
"__init__.py" = ["F401", "F403"]

[tool.pyright]
include = ["src/bayes_conf_mat"]
exclude = ["**/__pycache__", "src/bayes_conf_mat/reporting"]

venvPath = ".venv"

typeCheckingMode = "standard"

pythonVersion = "3.11"
pythonPlatform = "Linux"
